Homepage image + card header white + Lato font in home text

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -305,15 +305,15 @@
                       <ion-card-content>
                           <form>
                             <ion-item lines="full">
-                              <ion-label position="floating">Name</ion-label>
+                              <ion-label style="color: white;" position="floating">Name</ion-label>
                               <ion-input type="text" required></ion-input>
                             </ion-item>
                             <ion-item lines="full">
-                              <ion-label position="floating">Subject</ion-label>
+                              <ion-label style="color: white;" position="floating">Subject</ion-label>
                               <ion-input type="text" required></ion-input>
                             </ion-item>
                             <ion-item lines="full">
-                              <ion-label position="floating">Message</ion-label>
+                              <ion-label style="color: white;" position="floating">Message</ion-label>
                               <ion-input type="text" required></ion-input>
                             </ion-item>
                             <ion-row>
