--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -86,11 +86,12 @@ ion-card {
   left: 50px;
   font-size: 20px;
   color: white;
+  font-family: 'Lato';
 }
 ion-content {
   --ion-background-color: rgb(42, 66, 61);
   --ion-color: white;
 }
-ion-card {
+ion-card, ion-card-title {
   color: white;
 }
