--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,7 +5,10 @@
 <ion-content [fullscreen]="true">
   <!-- image -->
   <ion-card class="homepage-image-card">
-    <div class="home-text">Partner Consultants...</div>
+    <div class="home-text">
+      <p class="text1">Our clients trust us…..</p>
+      <p class="text2">because we partner with them</p>
+    </div>
     <ion-img class="homepage-image" src="assets/homepage-image.jpg" no-padding no-margin></ion-img>
   </ion-card>
   <!-- intro -->
