--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -95,3 +95,13 @@ ion-content {
 ion-card, ion-card-title {
   color: white;
 }
+.text1 {
+  // border: 1px solid red;
+  font-size: 50px;
+  padding: 0;
+  margin: 0;
+}
+.text2 {
+  // border: 1px solid yellow;
+  font-size: 50px;
+}
