--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,21 +13,21 @@
   </ion-card>
   <!-- intro -->
   <ion-card class="introduction-card">
-    <ion-card-header>
+    <!-- <ion-card-header>
       <ion-card-title>Introduction</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
+    </ion-card-header> -->
+    <ion-card-content class="introduction-card-content">
         {{homeIntroductionText}}
     </ion-card-content>
   </ion-card>
   <!-- infographic and content -->
-  <ion-card class="welcome-card">
-    <ion-grid>
-      <ion-row>
-        <ion-col size="8">
+  <ion-card class="infographic-card">
+    <!-- <ion-grid> -->
+      <!-- <ion-row> -->
+        <!-- <ion-col size="8"> -->
           <ion-img class="infographic-image" src="assets/5P-infographic.png"></ion-img>
-        </ion-col>
-        <ion-col size="4" style="margin: auto;">
+        <!-- </ion-col> -->
+        <!-- <ion-col size="4" style="margin: auto;">
           <ion-grid>
             <ion-row>
               <ion-col>
@@ -44,9 +44,9 @@
               </ion-col>
             </ion-row>
           </ion-grid>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
+        </ion-col> -->
+      <!-- </ion-row> -->
+    <!-- </ion-grid> -->
   </ion-card>
   <!-- services -->
   <ion-card class="welcome-card">
