--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,51 +1,23 @@
-<nav class="mb-1 navbar navbar-expand-lg navbar-dark default-color">
-  <a class="navbar-brand" href="#">
-    <img class="homepage-image" src="assets/pc-logo-white.png"/>
-  </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
-    aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarDarkDropdownMenuLink">
-    <ul class="navbar-nav ml-auto nav-flex-icons">     
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home
-          <span class="sr-only">(current)</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">About Us</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          Services
-        </a>
-        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-          <li><a class="dropdown-item" href="#">Business Strategy</a></li>
-          <li><a class="dropdown-item" href="#">Business Research</a></li>
-          <li><a class="dropdown-item" href="#">Functional Excellence</a></li>
-          <li><a class="dropdown-item" href="#">Business Operations</a></li>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">
+        <ion-img class="homepage-image" src="assets/pc-logo-white.png" no-padding no-margin></ion-img>
+      </a>
+    </div>
+    <ul class="nav navbar-nav navbar-right">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#">About Us</a></li>
+      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Services <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Business Strategy</a></li>
+          <li><a href="#">Business Research</a></li>
+          <li><a href="#">Business Operations</a></li>
+          <li><a href="#">Functional Excellence</a></li>
         </ul>
       </li>
-      <!-- <div class="right-side-content">
-        <div class="dropdown">
-          <button class="dropbtn">Dropdown1
-                  
-                  </button>
-          <div class="dropdown-content">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
-          </div>
-        </div>
-        <a class="navbar-brand navbar-right" href="#">
-          <img alt="CompanyLogo" src="https://dummyimage.com/40x40/fff/000?text=logo" />
-        </a>
-      </div> -->
-      <li class="nav-item">
-        <a class="nav-link" href="#">Get Started</a>
-      </li>
+      <li><a href="#">Get Started</a></li>
     </ul>
   </div>
 </nav>
-<!--/.Navbar -->
+
