Homepage image change

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,11 +5,20 @@
 <ion-content [fullscreen]="true">
   <!-- image -->
   <ion-card class="homepage-image-card">
-    <div class="home-text">
+
+    <div class="container">
+      <img class="homepage-image" src="assets/homepage-image.jpg" alt="Homepage" style="width:100%;">
+      <div class="home-text">
+        <p class="text1">Our clients trust us…..</p>
+        <p class="text2">because we <span class="highlight-text">partner</span> with them</p>
+      </div>
+    </div>
+
+    <!-- <div class="home-text">
       <p class="text1">Our clients trust us…..</p>
       <p class="text2">because we <span class="highlight-text">partner</span> with them</p>
     </div>
-    <ion-img class="homepage-image" src="assets/homepage-image.jpg" no-padding no-margin></ion-img>
+    <ion-img class="homepage-image" src="assets/homepage-image.jpg" no-padding no-margin></ion-img> -->
   </ion-card>
 
   <!-- intro -->
