--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,7 +1,7 @@
 .navbar {
     z-index: 1;
     margin-bottom: 0;
-    margin-right: 17px;
+    // margin-right: 17px;
 }
 .navbar-inverse {
     background-color: rgb(42, 66, 61);
