--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,16 +7,16 @@
     </div>
     <ul class="nav navbar-nav navbar-right">
       <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Services <span class="caret"></span></a>
+      <li><a href="/about">About</a></li>
+      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="/services">Services <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="#">Business Strategy</a></li>
-          <li><a href="#">Business Research</a></li>
-          <li><a href="#">Business Operations</a></li>
-          <li><a href="#">Functional Excellence</a></li>
+          <li><a href="/services#service1">Business Strategy</a></li>
+          <li><a href="/services#service2">Business Research</a></li>
+          <li><a href="/services#service3">Business Operations</a></li>
+          <li><a href="/services#service4">Functional Excellence</a></li>
         </ul>
       </li>
-      <li><a href="#">Get Started</a></li>
+      <li><a href="/contact-us">Get Started</a></li>
     </ul>
   </div>
 </nav>
