--- a/src/app/services/services.page.html
+++ b/src/app/services/services.page.html
@@ -1,9 +1,30 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>services</ion-title>
-  </ion-toolbar>
+<ion-header [translucent]="true">
+  <app-header></app-header>
 </ion-header>
 
 <ion-content>
 
+  <section id="container">
+    <div id="posts">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+      <a href="#">Link 4</a>
+      <a href="#">Link 5</a>
+      <a href="#">Link 6</a>
+      <a href="#">Link 7</a>
+      <a href="#">Link 8</a>
+    </div>
+  </section>
+  
+  <br>
+  
+  <button type="button">Prev</button>
+  <button type="button">Next</button>
+
+  
+  <a name="business-strategy">Business Strategy</a>
+  <a name="business-strategy">Business </a>
+  <a name="business-strategy"> Strategy</a>
+  <a name="business-strategy">Business Strategy 1</a>
 </ion-content>
