Media queries for header + homepage image

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -42,3 +42,6 @@ li a {
 .navbar-inverse .navbar-nav>li>a:hover {
     color: white;
 }
+.navbar-inverse .navbar-nav>li:hover {
+    background-color: rgb(18, 66, 55);
+}
