--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,20 +4,31 @@
       <a class="navbar-brand" href="#">
         <ion-img class="homepage-image" src="assets/pc-logo-white.png" no-padding no-margin></ion-img>
       </a>
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
     </div>
-    <ul class="nav navbar-nav navbar-right">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="/about">About</a></li>
-      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="/services">Services <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="/services#service1">Business Strategy</a></li>
-          <li><a href="/services#service2">Business Research</a></li>
-          <li><a href="/services#service3">Business Operations</a></li>
-          <li><a href="/services#service4">Functional Excellence</a></li>
-        </ul>
-      </li>
-      <li><a href="/contact-us">Get Started</a></li>
-    </ul>
+
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="/about">About</a></li>
+        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="/services">Services <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/services#service1">Business Strategy</a></li>
+            <li><a href="/services#service2">Business Research</a></li>
+            <li><a href="/services#service3">Business Operations</a></li>
+            <li><a href="/services#service4">Functional Excellence</a></li>
+          </ul>
+        </li>
+        <li><a href="/contact-us">Get Started</a></li>
+      </ul>
+    </div>
+
+    
   </div>
 </nav>
 
