--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -345,3 +345,52 @@ button:active {
   top: 8px;
   left: 16px;
 }
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .container {
+    height: 930px;
+  }
+  .infographic-image {
+    width: 100%;
+    height: 500px;
+  }
+  .introduction-card-content {
+    font-size: 25px;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .container {
+    height: 930px;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .container {
+    height: 930px;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .container {
+    height: 930px;
+    width: 100%;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  // .container {
+  //   height: 1300px;
+  // }
+}
+
+@media only screen and (min-width: 1690px) {
+  // .container {
+  //   height: 1300px;
+  // }
+}
