Media queries for homepage

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -145,8 +145,8 @@
             <ion-card-content>
               <ion-grid>
                 <ion-row>
-                  <ion-col size="4">
-                    <ion-card class="welcome-card">
+                  <ion-col size-xs="12" size-sm="12" size-md="4" size="4">
+                    <ion-card class="service-models-details-card">
                       <ion-card-header>
                         <ion-card-title>Project Work</ion-card-title>
                       </ion-card-header>
@@ -155,8 +155,8 @@
                       </ion-card-content>
                     </ion-card>
                   </ion-col>
-                  <ion-col size="4">
-                    <ion-card class="welcome-card">
+                  <ion-col size-xs="12" size-sm="12" size-md="4" size="4">
+                    <ion-card class="service-models-details-card">
                       <ion-card-header>
                         <ion-card-title>Monthly Retainer</ion-card-title>
                       </ion-card-header>
@@ -165,8 +165,8 @@
                       </ion-card-content>
                     </ion-card>
                   </ion-col>
-                  <ion-col size="4">
-                    <ion-card class="welcome-card">
+                  <ion-col size-xs="12" size-sm="12" size-md="4" size="4">
+                    <ion-card class="service-models-details-card">
                       <ion-card-header>
                         <ion-card-title>On-call Assignment</ion-card-title>
                       </ion-card-header>
@@ -203,14 +203,14 @@
               <ion-grid>
                 <ion-row>
                   <ion-col size="6">
-                    <ion-card class="welcome-card">
+                    <ion-card class="service-models-details-card">
                       <ion-card-content>
                           <p>{{consultingFirms1Text}}</p>
                       </ion-card-content>
                     </ion-card>
                   </ion-col>
                   <ion-col size="6">
-                    <ion-card class="welcome-card">
+                    <ion-card class="service-models-details-card">
                       <ion-card-content>
                           <p>{{consultingFirms2Text}}</p>
                       </ion-card-content>
@@ -237,7 +237,7 @@
             <ion-card-content>
               <ion-grid>
                 <ion-row>
-                  <ion-col size="4">
+                  <ion-col size-xs="12" size-sm="12" size-md="4" size="4">
                     <ion-card class="welcome-card">
                       <ion-grid>
                         <ion-row>
@@ -262,7 +262,7 @@
                       </ion-grid>
                     </ion-card>
                   </ion-col>
-                  <ion-col size="4">
+                  <ion-col size-xs="12" size-sm="12" size-md="4" size="4">
                     <ion-card class="welcome-card">
                       <ion-grid>
                         <ion-row>
@@ -287,7 +287,7 @@
                       </ion-grid>
                     </ion-card>
                   </ion-col>
-                  <ion-col size="4">
+                  <ion-col size-xs="12" size-sm="12" size-md="4" size="4">
                     <ion-card class="welcome-card">
                       <ion-grid>
                         <ion-row>
@@ -322,18 +322,18 @@
   </ion-card>
 
   <!-- contact us -->
-  <ion-card class="service-models-ion-card">
+  <ion-card class="contact-us-card">
     <ion-card-header class="card-header">
       <ion-card-title class="card-title">Get Started</ion-card-title>
     </ion-card-header>
     <ion-grid>
       <ion-row style="box-shadow: none;">
         <ion-col>
-          <ion-card class="service-models-card">
+          <ion-card class="contact-details-card">
             <ion-card-content>
               <ion-grid>
                 <ion-row>
-                  <ion-col size="5">
+                  <ion-col size-xs="12" size-sm="12" size-md="5" size="5">
                     <ion-card class="welcome-card">
                       <ion-card-content>
                         <ion-row>
@@ -357,7 +357,7 @@
                       </ion-card-content>
                     </ion-card>
                   </ion-col>
-                  <ion-col size="7">
+                  <ion-col size-xs="12" size-sm="12" size-md="7" size="7">
                     <ion-card class="write-to-us-card">
                       <ion-card-header>
                         <ion-card-title>Write to Us</ion-card-title>
