Our approach responsive

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -35,6 +35,10 @@
 
   <!-- our approach -->
   <ion-card class="our-approach-card">
+    <ion-card-header class="card-header">
+      <ion-card-title class="card-title">HOW</ion-card-title>
+      <ion-card-subtitle class="approach-subtitle">we deliver strategic solutions to our clients</ion-card-subtitle>
+    </ion-card-header>
     <ion-img class="our-approach-image" src="assets/our-approach.png"></ion-img>
   </ion-card>
 
