--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -61,11 +61,13 @@ ion-img {
 //   width: 45%;
 // }
 .our-approach-card {
-  margin-top: 50px;
+  padding-top: 50px;
   margin-bottom: 50px;
+  background-color: rgb(64,64,64);
 }
 .our-approach-image {
-  width: 100%;
+  width: 80%;
+  height: 80%;
 }
 .introduction-card-content {
   font-size: 24px;
@@ -345,6 +347,10 @@ button:active {
   top: 8px;
   left: 16px;
 }
+.approach-subtitle {
+  font-size: 40px;
+  color: white;
+}
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
@@ -390,6 +396,13 @@ button:active {
   }
   .contact-us-card {
     height: 900px;
+  }
+  .our-approach-card {
+    height: 100%;
+  }
+  .our-approach-image {
+    width: 100%;
+    height: 38%;
   }
 }
 
@@ -438,12 +451,29 @@ button:active {
   .contact-us-card {
     height: 900px;
   }
+  .our-approach-card {
+    height: 100%;
+  }
+  .our-approach-image {
+    width: 100%;
+    height: 38%;
+  }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
   .container {
     height: 930px;
+  }
+  .approach-subtitle {
+    font-size: 35px;
+  }
+  .our-approach-card {
+    height: 100%;
+  }
+  .our-approach-image {
+    width: 95%;
+    height: 60%;
   }
 }
 
@@ -457,9 +487,12 @@ button:active {
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
-  // .container {
-  //   height: 1300px;
-  // }
+  .approach-subtitle {
+    font-size: 35px;
+  }
+  .our-approach-card {
+    height: 100%;
+  }
 }
 
 @media only screen and (min-width: 1440px) {
@@ -468,6 +501,7 @@ button:active {
   }
   .our-approach-card {
     height: 100%;
+    background-color: rgb(64,64,64);
   }
   .service-grid {
     width: 60%;
@@ -502,6 +536,12 @@ button:active {
   .service-grid > .child3:hover ~ .service-details-grid3,
   .service-grid > .child4:hover ~ .service-details-grid4 {
     margin-top: 0;
+  }
+  .our-approach-image {
+    height: 75%;
+  }
+  .approach-subtitle {
+    font-size: 35px;
   }
 }
 
